--- a/package.json
+++ b/package.json
@@ -1,33 +1,58 @@
 {
-  "name": "webpack-imooc",
+  "name": "koa-full-stack",
   "version": "1.0.0",
-  "description": "first webpack project",
-  "main": "index.js",
+  "description": "test full-stack koa+webpack+react",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "node_modules/.bin/webpack --config webpack.dev.config.js --progress --display-modules --colors --display-reasons"
+    "build": "node_modules/.bin/webpack --config webpack.dev.config.js --progress --display-modules --colors --display-reasons",
+    "start": "node_modules/.bin/webpack-dev-server --config webpack.dev.config.js --hot"
   },
   "keywords": [
-    "webpack"
+    "koa",
+    "webpack",
+    "react"
   ],
   "author": "Yibay",
-  "license": "ISC",
+  "license": "MIT",
+  "dependencies": {
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.0.1",
+    "koa-router": "^7.2.1",
+    "koa-session": "^5.4.0",
+    "koa-static": "^4.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.2"
+  },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
-    "css-loader": "^0.28.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "image-webpack-loader": "^3.3.1",
+    "html-webpack-plugin": "^2.29.0",
     "img-loader": "^2.0.0",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
+    "postcss-loader": "^2.0.6",
+    "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.5.1"
-  }
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yibay/React-HankowThames.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Yibay/React-HankowThames/issues"
+  },
+  "homepage": "https://github.com/Yibay/React-HankowThames#readme"
 }
